[package]
name = "incdbscan_rs"
version = "0.2.0"
edition = "2021"

[lib]
name = "incdbscan_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["dep:pyo3", "dep:numpy", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
numpy = { version = "0.23", optional = true }
petgraph = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rayon = "1.10"

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"

[[bench]]
name = "batch_scaling"
harness = false
